.forge-output/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-weather
  labels:
    app: demo-weather
spec:
  selector:
    app: demo-weather
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
